# cut-the-fat

./: .env.example  .gitignore  CLAUDE.md  README.md  ctf  ctf-desktop  ctf-web  package-lock.json  package.json  start.sh
.claude/commands/: add-category.md  add-parser.md  chart.md  check.md  dashboard.md  db-inspect.md  insights.md  learn.md  migrate.md  report.md  review.md  upload.md
.github/workflows/: release.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py  queries.py
backend/tests/: test_csv_parser.py  test_history_integrity.py  test_settings_and_bugreport.py
cli/: __init__.py  db.py  main.py
cli/commands/: dashboard.py  insights.py  learn.py  report.py  upload.py
cli/render/: md_writer.py  terminal.py  tui_learn.py
doc/: GUIDELINES.md  PRD_UI_App.md  UI_PLAN.md  chat-frontend-plan-draft-v2.md  chat-frontend-plan-draft.md  tauri-desktop.md
doc/features/: BACKLOG.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
scripts/: build-sidecar.mjs  configure-tauri.mjs  rename-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: __init__.py  app.py  auth.py  ws_manager.py
web/handlers/: bugreport.py  compare.py  dashboard.py  explore.py  history.py  insights.py  learn.py  report.py
web/logic/: formatter.py  processor.py
web/static/: chat.js  index.html  settings.html  settings.js  style.css  topbar.js  transactions.css  (+2 more)
(+45 files in other folders)
