[package]
name = "cut-the-fat"
version = "0.1.0"
edition = "2021"
description = "Cut the Fat — Persönliche Finanzanalyse als Desktop-App"

[lib]
name = "cut_the_fat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
